# fastapi-ddd-starter-template

./: .gitignore  README.md  dev.sh  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: router.py
src/config/: setting.py
src/core/: security.py
src/modules/mock/presentation/: mock_controller.py
